Collapsible LHS decks with edge case for previously collapsed opened when third collapse requested

--- a/src/templates/home/MemberDeck/MemberDeck.html
+++ b/src/templates/home/MemberDeck/MemberDeck.html
@@ -1,4 +1,4 @@
-<div id="MemberDeck" class="deck flex-column">
+<div id="MemberDeck" class="deck flex-column" data-last-collapsed="false">
 
 	<!-- Headers -->
 	{% include 'home/MemberDeck/MemberDeckHeaders.html' %}
