--- a/src/templates/home/UTubDeck/UTubDeck.html
+++ b/src/templates/home/UTubDeck/UTubDeck.html
@@ -1,4 +1,4 @@
-<div id="UTubDeck" class="deck flex-column">
+<div id="UTubDeck" class="deck flex-column" data-last-collapsed="false">
 
     <!-- Headers -->
     {% include 'home/UTubDeck/UTubDeckHeaders.html' %}
