--- a/src/templates/home/MemberDeck/MemberDeckHeaders.html
+++ b/src/templates/home/MemberDeck/MemberDeckHeaders.html
@@ -1,6 +1,11 @@
 <div class="titleElement sidePanelTitle pad-in-15p">
 	<div class="col-6 col-lg-6">
-		<h2 id="MemberDeckHeader">Members</h2>
+		<div id="MemberDeckHeaderAndCaret" class="flex-row flex-center gap-2p clickable">
+			<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill title-caret" viewBox="0 0 16 16">
+				<path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
+			</svg>
+			<h2 id="MemberDeckHeader">Members</h2>
+		</div>
 	</div>
 	<div class="col-6 col-lg-6 d-flex flex-row button-container">
 		<!-- Add user button -->
