--- a/src/templates/home/TagsDeck/TagsDeck.html
+++ b/src/templates/home/TagsDeck/TagsDeck.html
@@ -1,7 +1,12 @@
-<div id="TagDeck" class="deck flex-column">
+<div id="TagDeck" class="deck flex-column" data-last-collapsed="false">
 	<div class="titleElement pad-in-15p justify-space-between">
 		<div class="flex-row gap-10p">
-			<h2 id="TagDeckHeader">Tags</h2>
+			<div id="TagDeckHeaderAndCaret" class="flex-row flex-center gap-2p clickable">
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill title-caret" viewBox="0 0 16 16">
+				<path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
+				</svg>
+				<h2 id="TagDeckHeader">Tags</h2>
+			</div>
 		</div>
 		<div class="flex-row button-container gap-2p">
 			<!-- Add tag button -->
