--- a/src/static/styles/home.css
+++ b/src/static/styles/home.css
@@ -40,20 +40,50 @@
     padding-bottom: 8px;
 }
 
-.deckContent {
-    width: 100%;
-    height: 90%;
-    margin: 0px;
+.deck#UTubDeck,
+.deck#MemberDeck,
+.deck#TagDeck {
+    flex: 1 1 0;
+    transition: flex 0.3s ease;
+}
+
+.deck#UTubDeck.collapsed,
+.deck#MemberDeck.collapsed,
+.deck#TagDeck.collapsed {
+    flex: 0 0 48px;
+    padding-bottom: 0;
+}
+
+.content {
+    flex: 1 1 0;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    border-top: 2px solid var(--contentTopBorder);
+    padding-bottom: 3px;
+    min-height: 0;
+}
+
+.content {
+    transition: opacity 0.3s ease;
+}
+
+.titleElement {
+    transition: all 0.3s ease;
+}
+
+.deck.collapsed .content,
+.deck.collapsed .titleElement:nth-of-type(2) {
+    opacity: 0;
+    flex-shrink: 0;
+    height: 0;
+    min-height: 0;
     overflow: hidden;
 }
 
-.deck#MemberDeck,
-.deck#TagDeck {
-    height: 33%;
-}
-
-.deck#UTubDeck {
-    height: 34%;
+.deck.collapsed .button-container {
+    transition: opacity 0.3s ease;
+    opacity: 0;
+    pointer-events: none;
 }
 
 /* Buttons */
@@ -86,6 +116,10 @@
 .funnel-x:hover {
     cursor: pointer;
     background: var(--removeIconColorHover);
+}
+
+.clickable {
+    cursor: pointer;
 }
 
 .cancelButton {
@@ -135,6 +169,16 @@
     justify-content: flex-end;
 }
 
+.title-caret {
+    color: var(--deckHeaderGreen);
+    transition: transform 0.15s ease;
+    transform-origin: center;
+}
+
+.title-caret.closed {
+    transform: rotate(-90deg);
+}
+
 /* Utility */
 
 .flex-row {
@@ -159,12 +203,8 @@
     flex-direction: row;
 }
 
-.content {
-    flex: 1 1 auto;
-    overflow-y: auto;
-    scrollbar-width: thin;
-    border-top: 2px solid var(--contentTopBorder);
-    padding-bottom: 3px;
+.deck .titleElement:first-child {
+    height: 38px;
 }
 
 .flex-1-1-auto {
@@ -1225,6 +1265,16 @@ a.urlString:hover {
     .urlRow[filterable="true"][urlSelected="true"] .createUrlTagWrap>.text-input-container {
         width: 100%;
     }
+
+    .title-caret {
+        display: none;
+    }
+
+    #MemberDeckHeader,
+    #TagDeckHeader,
+    #UTubDeckHeader {
+        pointer-events: none;
+    }
 }
 
 @media (max-width: 767.98px) {
@@ -1247,7 +1297,6 @@ a.urlString:hover {
     #accessAllURLsBtn {
         width: 100% !important;
     }
-
 }
 
 @media (min-width: 465px) {}
