Refactor url validation into a string parsing flow with WHATWG compliance

--- a/src/static/styles/home.css
+++ b/src/static/styles/home.css
@@ -181,6 +181,10 @@
 
 /* Utility */
 
+.white-space-pre-line {
+    white-space: pre-line;
+}
+
 .flex-row {
     display: flex;
     flex-direction: row;
