--- a/src/templates/_strings.html
+++ b/src/templates/_strings.html
@@ -23,6 +23,8 @@ class Strings {
 			this.ADD_URL_TAG_TOOLTIP = "{{CONSTANTS.STRINGS.ADD_URL_TAG_TOOLTIP}}"
 			this.EDIT_URL_TOOLTIP = "{{CONSTANTS.STRINGS.EDIT_URL_TOOLTIP}}"
 			this.DELETE_URL_TOOLTIP = "{{CONSTANTS.STRINGS.DELETE_URL_TOOLTIP}}"
+			this.INVALID_URL = "{{CONSTANTS.STRINGS.UNABLE_TO_VALIDATE_THIS_URL}}"
+			this.ACCESS_URL_WARNING = "{{CONSTANTS.STRINGS.ACCESS_URL_WARNING}}"
 			Strings.instance = this;
 		}
 
