--- a/src/templates/home/MemberDeck/MemberDeckHeaders.html
+++ b/src/templates/home/MemberDeck/MemberDeckHeaders.html
@@ -1,4 +1,4 @@
-<div class="titleElement sidePanelTitle pad-in-15p">
+<div class="titleElement sidePanelTitle pad-in-15p pad-b-0-25rem">
 	<div class="col-6 col-lg-6">
 		<div id="MemberDeckHeaderAndCaret" class="flex-row flex-center gap-2p clickable">
 			<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill title-caret" viewBox="0 0 16 16">
