--- a/src/templates/home/TagsDeck/TagsDeck.html
+++ b/src/templates/home/TagsDeck/TagsDeck.html
@@ -1,5 +1,5 @@
 <div id="TagDeck" class="deck flex-column" data-last-collapsed="false">
-	<div class="titleElement pad-in-15p justify-space-between">
+	<div class="titleElement pad-in-15p sidePanelTitle justify-space-between pad-b-0-25rem">
 		<div class="flex-row gap-10p">
 			<div id="TagDeckHeaderAndCaret" class="flex-row flex-center gap-2p clickable">
 				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill title-caret" viewBox="0 0 16 16">
