--- a/src/templates/home/UTubDeck/UTubDeckHeaders.html
+++ b/src/templates/home/UTubDeck/UTubDeckHeaders.html
@@ -52,7 +52,7 @@
 </div>
 
 <!-- Subheader -->
-<div class="titleElement pad-in-15p height-2p5rem">
+<div class="titleElement pad-in-15p height-2rem">
     <div id="UTubDeckSubheaderWrap" class="flex-column">
         {% if utubs_for_this_user|length == 0 %}
         <h5 id="UTubDeckSubheader">{{ CONSTANTS.STRINGS.UTUB_CREATE_MSG }}</h5>
