--- a/src/static/styles/home.css
+++ b/src/static/styles/home.css
@@ -258,7 +258,6 @@
 
 .pad-b-0-25rem {
     padding-bottom: 0.25rem;
-
 }
 
 .gap-2p {
@@ -312,6 +311,11 @@
 .pad-top-bot-5p {
     padding-top: 5px;
     padding-bottom: 5px;
+}
+
+.m-top-bot-0-5rem {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .half-width {
