--- a/src/templates/home/URLDeck/URLDeckHeader.html
+++ b/src/templates/home/URLDeck/URLDeckHeader.html
@@ -1,6 +1,6 @@
 <div class="titleElement pad-in-15p justify-space-between">
 
-	<div class="flex-row align-center sixtyfive-width">
+	<div class="flex-row align-center" id="UTubNameOuterUpdateWrap">
 		<!-- Header -->
 		<div class="flex-row align-center" id="UTubNameUpdateWrap">
 			<h2 id="URLDeckHeader">URLs</h2>
