--- a/src/templates/home/URLDeck/UpdateUTubDescriptionForm.html
+++ b/src/templates/home/URLDeck/UpdateUTubDescriptionForm.html
@@ -4,7 +4,7 @@
 
 <!-- Form to update UTub Description -->
 <div class="createDiv flex-row full-width hidden" id="UTubDescriptionUpdateWrap">
-	<div class="text-input-container sixtyfive-width">
+	<div class="text-input-container" id="UTubDescriptionInnerUpdateWrap">
 		<div class="text-input-inner-container">
 			<input class="text-input" type="text" id="utubDescriptionUpdate" name="utubDescription" maxlength={{CONSTANTS.UTUBS.MAX_DESCRIPTION_LENGTH}} required>
 			<label class="text-input-label" for="utubDescription">UTub Description</label>
