--- a/src/static/styles/home.css
+++ b/src/static/styles/home.css
@@ -258,7 +258,6 @@
 
 .pad-b-0-25rem {
     padding-bottom: 0.25rem;
-
 }
 
 .gap-2p {
@@ -312,6 +311,11 @@
 .pad-top-bot-5p {
     padding-top: 5px;
     padding-bottom: 5px;
+}
+
+.m-top-bot-0-5rem {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .half-width {
@@ -1213,6 +1217,15 @@ a.urlString:hover {
     transition: height 0.2s ease-in-out, opacity 0.1s ease-in-out, padding 0.1s ease-in-out, border 0.1s ease-in-out, font-size 0.1s ease-in-out;
 }
 
+
+#UTubNameOuterUpdateWrap {
+    width: 85%;
+}
+
+#UTubDescriptionInnerUpdateWrap {
+    width: 65%;
+}
+
 .URLDeckErrorIndicatorShow {
     height: auto !important;
     padding: 5px !important;
@@ -1290,6 +1303,15 @@ a.urlString:hover {
     #TagDeckHeader,
     #UTubDeckHeader {
         pointer-events: none;
+    }
+
+    #UTubDescriptionInnerUpdateWrap,
+    #UTubNameOuterUpdateWrap {
+        width: 100%;
+    }
+
+    #UTubNameOuterUpdateWrap ~ .button-container {
+        width: 0% !important;
     }
 }
 
