--- a/src/static/styles/app.css
+++ b/src/static/styles/app.css
@@ -51,9 +51,11 @@
     --tagSelectedTextColor: rgba(14, 66, 27, 1.0);
     --tagCountBackgroundSelectedColor: rgba(14, 186, 130, 1.0);
     --tagCountBorderColor: rgba(72, 85, 86, 1.0);
+    --updateUTubTagBtnColor: var(--editURLColor);
+    --updateUTubTagBtnColorHover: var(--editURLColorHover);
 
-    --tagBadgeDeleteBtnColor: rgba(136, 136, 136, 0.85);
-    --tagBadgeDeleteBtnColorHover: var(--removeMemberColor);
+    --tagBadgeDeleteBtnColor: var(--removeIconColor);
+    --tagBadgeDeleteBtnColorHover: var(--removeIconColorHover);
 
     --contentTopBorder: rgba(126, 130, 130, 0.25);
 
