--- a/src/templates/home/TagsDeck/TagsDeck.html
+++ b/src/templates/home/TagsDeck/TagsDeck.html
@@ -8,13 +8,26 @@
 				<h2 id="TagDeckHeader">Tags</h2>
 			</div>
 		</div>
-		<div class="flex-row button-container gap-2p">
+		<div id="utubTagCloseUpdateTagBtnContainer" class="flex-row button-container gap-2p hidden">
+			<!-- Unselect all applied tag filters button -->
+			<i id="utubTagBtnUpdateAllClose" class="pointerable ms-1" tabindex="0">
+				<svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="30" width="30" xmlns="http://www.w3.org/2000/svg"><path fill="none" d="M0 0h24v24H0V0z"></path><path d="M10 9V5l-7 7 7 7v-4.1c5 0 8.5 1.6 11 5.1-1-5-4-10-11-11z"></path></svg>
+			</i>
+		</div>
+		<div id="utubTagStandardBtns" class="flex-row button-container gap-2p">
 			<!-- Add tag button -->
 			<i id="utubTagBtnCreate"class="green-clickable ms-1 hidden" tabindex="0">
 				<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill" width="30"
 					height="30" viewBox="0 0 16 16">
 					<path
 						d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
+				</svg>
+			</i>
+			<!-- Edit UTub Tags -->
+			<i id="utubTagBtnUpdateAllOpen"class="green-clickable ms-1 hidden" tabindex="0">
+				<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+					<path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+					<path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
 				</svg>
 			</i>
 
@@ -28,6 +41,7 @@
 					<path fill="black" d="M12.146 12.854a.5.5 0 0 1 0-.708L13.293 11l-1.147-1.146a.5.5 0 0 1 .708-.708L14 10.293l1.146-1.147a.5.5 0 0 1 .708.708L14.707 11l1.147 1.146a.5.5 0 0 1-.708.708L14 11.707l-1.146 1.147a.5.5 0 0 1-.708 0z"/>
 				  </svg>								
 			</i>
+
 		</div>
 	</div>
 	<div class="titleElement pad-in-15p dynamic-subheader">
