UI tests for deleting utub tags

--- a/src/static/styles/home.css
+++ b/src/static/styles/home.css
@@ -180,6 +180,15 @@
     transform: rotate(-90deg);
 }
 
+#HomeModalAlertBanner {
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
+}
+
+#HomeModalAlertBanner > a {
+    color: var(--bs-link-color);
+}
+
 /* Utility */
 
 .white-space-pre-line {
