--- a/src/templates/_strings.html
+++ b/src/templates/_strings.html
@@ -11,6 +11,9 @@ class Strings {
 			this.FORGOT_YOUR_PASSWORD = "{{CONSTANTS.STRINGS.FORGOT_YOUR_PASSWORD}}"
 			this.LOGIN_TITLE = "{{CONSTANTS.STRINGS.LOGIN_TITLE}}"
 
+			// General Strings
+			this.MAY_HAVE_ALREADY_BEEN_DELETED = "{{CONSTANTS.STRINGS.MAY_HAVE_ALREADY_BEEN_DELETED}}"
+
 			// UTub Strings
 			this.UTUB_CREATE_SAME_NAME = "{{CONSTANTS.STRINGS.UTUB_CREATE_SAME_NAME}}"
 			this.UTUB_UPDATE_SAME_NAME = "{{CONSTANTS.STRINGS.UTUB_UPDATE_SAME_NAME}}"
@@ -38,6 +41,7 @@ class Strings {
 			this.ADD_URL_TAG_TOOLTIP = "{{CONSTANTS.STRINGS.ADD_URL_TAG_TOOLTIP}}"
 			this.EDIT_URL_TOOLTIP = "{{CONSTANTS.STRINGS.EDIT_URL_TOOLTIP}}"
 			this.DELETE_URL_TOOLTIP = "{{CONSTANTS.STRINGS.DELETE_URL_TOOLTIP}}"
+
 			Strings.instance = this;
 		}
 
