--- a/src/templates/modals/homeModalBase.html
+++ b/src/templates/modals/homeModalBase.html
@@ -14,6 +14,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="close">
                     </button>
                 </div>
+                <div id="HomeModalAlertBanner" class="alert alert-danger hidden" role="alert"></div>
                 <div id="confirmModalBody" class="modal-body">
                 </div>
                 <div class="modal-footer">
@@ -25,3 +26,4 @@
         </div>
     </div>
 </div>
+<!--This item may already have been deleted.<br>Click <a id="Reloader" href="#">here</a> to reload the UTub. -->
