Insert tag string into delete modal

--- a/src/templates/_strings.html
+++ b/src/templates/_strings.html
@@ -31,7 +31,7 @@ class Strings {
 			this.ACCESS_URL_WARNING = "{{CONSTANTS.STRINGS.ACCESS_URL_WARNING}}"
 
 			// Tag Strings
-			this.UTUB_TAG_DELETE_WARNING = "{{CONSTANTS.STRINGS.UTUB_TAG_DELETE_WARNING}}"
+			this.UTUB_TAG_DELETE_WARNING = "{{CONSTANTS.STRINGS.UTUB_TAG_DELETE_WARNING | safe}}"
 
 			// Tooltips
 			this.COPY_URL_TOOLTIP = "{{CONSTANTS.STRINGS.COPY_URL_TOOLTIP}}"
