--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,28 +1,29 @@
 {% extends "layout.html" %}
-{% block utubhome %}
+{% block mainbody %}
+<main id="mainPanel" class="mx-0 bt-4 pt-0">
+    <!-- Left Panel -->
+    <div id="leftPanel" class="panel">
+        <!-- UTubs -->
+        {% include 'home/UTubDeck/UTubDeck.html' %}
+        <!-- End UTubs -->
 
-<!-- Left Panel -->
-<div id="leftPanel" class="panel">
-    <!-- UTubs -->
-    {% include 'home/UTubDeck/UTubDeck.html' %}
-    <!-- End UTubs -->
+        <!-- Members -->
+        {% include 'home/MemberDeck/MemberDeck.html' %}
+        <!-- End Members -->
 
-    <!-- Members -->
-    {% include 'home/MemberDeck/MemberDeck.html' %}
-    <!-- End Members -->
+        <!-- Tags -->
+        {% include 'home/TagsDeck/TagsDeck.html' %}
+        <!-- End Tags -->
+    </div>
 
-    <!-- Tags -->
-    {% include 'home/TagsDeck/TagsDeck.html' %}
-    <!-- End Tags -->
-</div>
+    <!-- End Left Panel -->
 
-<!-- End Left Panel -->
-
-<!-- Center Panel -->
-<div id="centerPanel" class="panel">
-    {% include 'home/URLDeck/URLDeck.html' %}
-</div>
-<!-- End Center Panel -->
+    <!-- Center Panel -->
+    <div id="centerPanel" class="panel">
+        {% include 'home/URLDeck/URLDeck.html' %}
+    </div>
+    <!-- End Center Panel -->
+</main>
 <!-- Home Page JS -->
 <!-- Add asset version based on UNIX epoch to cache bust when updates are made -->
 {% assets "logged_in_js" %}
