--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -41,16 +41,11 @@
     {% if current_user.is_authenticated and current_user.email_validated %}
     <!-- Main Panel View -->
 
-    <main id="mainPanel" class="mx-0 bt-4 pt-0">
-        <div id="pageContent" class="">
-            {% block utubhome %}
-            {% endblock %}
-        </div>
-    </main>
-
-    <!-- Main Panel View -->
-
     {% endif %}
+    {% endblock %}
+
+    {% block footer %}
+    {% include 'footer.html' %}
     {% endblock %}
 
 </body>
