--- a/src/static/styles/splash.css
+++ b/src/static/styles/splash.css
@@ -41,15 +41,17 @@ form {
     padding-left: 0px;
 }
 
-.bg-cover {
-  position: relative;
-  width: 100%;
-  height: calc(100vh - 50px);
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.jumbotron-holder {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 }
+
 
 #mainNavbar,
 .jumbotron-holder {
@@ -62,6 +64,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 
 .splash-button {
