--- a/src/templates/components/home/URLDeck/URLDeckHeader.html
+++ b/src/templates/components/home/URLDeck/URLDeckHeader.html
@@ -5,7 +5,7 @@
 		<div class="flex-row align-center" id="UTubNameUpdateWrap">
 			<h2 id="URLDeckHeader">URLs</h2>
 			<!-- Show Update UTub name button -->
-			<i id="utubNameBtnUpdate" class="mx-1 hidden">
+			<button id="utubNameBtnUpdate" class="mx-1 hidden">
 				<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
 					class="bi bi-pencil-square updateIcon" viewBox="0 0 16 16">
 					<path
@@ -13,7 +13,7 @@
 					<path fill-rule="evenodd"
 						d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
 				</svg>
-			</i>
+			</button>
 		</div>
 
 		<!-- Update UTub name -->
@@ -22,12 +22,12 @@
 
 	<!-- Create URL button -->
 	<div class="col-3 col-lg-3 d-flex flex-row button-container">
-		<i id="urlBtnCreate" class="green-clickable hidden" tabindex="0">
+		<button id="urlBtnCreate" class="green-clickable hidden" tabindex="0">
 			<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
 				class="bi bi-plus-square-fill" viewBox="0 0 16 16">
 				<path
 					d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
 			</svg>
-		</i>
+		</button>
 	</div>
 </div>
