--- a/src/templates/components/home/URLDeck/URLDeckSubheader.html
+++ b/src/templates/components/home/URLDeck/URLDeckSubheader.html
@@ -2,7 +2,7 @@
 	<div class="flex-row align-center" id="UTubDescriptionSubheaderWrap">
 		<h5 id="URLDeckSubheader">{{CONSTANTS.STRINGS.UTUB_SELECT}}</h5>
 		<!-- Update UTub description button -->
-		<i id="updateUTubDescriptionBtn" class="mx-1 hiddenBtn">
+		<button id="updateUTubDescriptionBtn" class="mx-1 hiddenBtn">
 			<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
 				class="bi bi-pencil-square updateIcon" viewBox="0 0 16 16">
 				<path
@@ -10,7 +10,7 @@
 				<path fill-rule="evenodd"
 					d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
 			</svg>
-		</i>
+		</button>
 	</div>
 
 	<!-- Update UTub Description -->
