Return to home from privacy and terms pages

--- a/src/templates/_config.html
+++ b/src/templates/_config.html
@@ -4,6 +4,7 @@
         
         return {
             routes: {
+                home: raw.routes.home,
                 createUTub: raw.routes.createUTub,
                 getUTubs: raw.routes.getUTubs,
                 login: raw.routes.login,
