--- a/src/templates/pages/privacy_policy.html
+++ b/src/templates/pages/privacy_policy.html
@@ -2,7 +2,7 @@
 {% block mainbody %}
 <main class="flex-column">
 
-  <h1>Privacy Policy</h1>
+  <h1 id="PrivacyTitle">Privacy Policy</h1>
   <h2>URLS4IRL</h2>
   <p class="muted"><strong>Effective Date:</strong> December 6, 2025</p>
 
