--- a/src/templates/pages/terms_and_conditions.html
+++ b/src/templates/pages/terms_and_conditions.html
@@ -2,7 +2,7 @@
 {% block mainbody %}
 <main class="flex-column">
 
-<h1>Terms & Conditions</h1>
+<h1 id="TermsTitle">Terms & Conditions</h1>
 <p><strong>Last updated:</strong> [Insert Date]</p>
 
 <p>
