--- a/src/static/styles/home.css
+++ b/src/static/styles/home.css
@@ -3,7 +3,7 @@
 main {
     display: flex;
     flex-direction: row;
-    background-color: var(--pageBackgroundColor);
+    background-color: var(--defaultPageBackgroundColor);
 }
 
 button {
