--- a/src/static/styles/privacy_terms.css
+++ b/src/static/styles/privacy_terms.css
@@ -1,6 +1,6 @@
 main {
     padding-inline: 20%;
-    background: var(--pageBackgroundColor);
+    background: var(--defaultPageBackgroundColor);
 }
 
 h2,
