--- a/src/templates/pages/terms_and_conditions.html
+++ b/src/templates/pages/terms_and_conditions.html
@@ -3,7 +3,7 @@
 <main class="flex-column">
 
 <h1 id="TermsTitle">Terms & Conditions</h1>
-<p><strong>Last updated:</strong> [Insert Date]</p>
+<p><strong>Last updated:</strong> December 6, 2025</p>
 
 <p>
 These Terms & Conditions (“Terms”) govern your access to and use of URLS4IRL (the “Service”). 
