--- a/src/templates/error_pages/error_response.html
+++ b/src/templates/error_pages/error_response.html
@@ -18,6 +18,7 @@
             align-items: center;
             background-color: #1f2424;
             color: #28a745;
+            overflow-x: hidden;
         }
 
         main {
@@ -32,7 +33,6 @@
             color: white;
             font-size: 24px;
             text-align: center;
-            width: 100%;
         }
 
         .content {
