--- a/src/templates/components/footer.html
+++ b/src/templates/components/footer.html
@@ -2,6 +2,7 @@
     <div class="flex-row g-0-5r">
         <a id="PrivacyBtn" href="/privacy-policy">Privacy</a>
         <a id="TermsBtn" href="/terms">Terms</a>
+        <a id="ContactBtn" href="/contact">Contact Us</a>
     </div>
-    <p>© 2025 URLS4IRL</p>
+    <p>© 2026 URLS4IRL</p>
 </footer>
