--- a/src/templates/components/nav/nav_splash_items.html
+++ b/src/templates/components/nav/nav_splash_items.html
@@ -1,5 +1,5 @@
 <ul id="NavbarDropdownsSplash" class="navbar-nav">
-    {% if is_privacy_or_terms %}
+    {% if is_privacy_or_terms or is_contact_form %}
     <li class="nav-item splash">
         <div class="nav-bar-inner-item splash">
             <a href="/" id="backToSplashBtn" >
