Fix corner btn alignment on update url title

--- a/src/static/styles/home.css
+++ b/src/static/styles/home.css
@@ -247,6 +247,10 @@ button {
     align-items: flex-end;
 }
 
+.self-start {
+    align-self: flex-start;
+}
+
 .justify-center {
     justify-content: center;
 }
