Fix empty UTub URL btn width

--- a/src/templates/components/home/URLDeck/URLDeck.html
+++ b/src/templates/components/home/URLDeck/URLDeck.html
@@ -14,7 +14,7 @@
 
 		<!-- Create URL button -->
 		<div id="urlBtnDeckCreateWrap" class="flex-column align-center pad-in-15p pad-top-10p hidden full-width">
-			<button id="urlBtnDeckCreate" class="btn btn-success half-width">No URLs here yet - Add one!</button>
+			<button id="urlBtnDeckCreate" class="btn btn-success full-width">Empty UTub... Click to add a URL!</button>
 		</div>
 
 		<div id="listURLs">
